// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TableCell /> ref should work 1`] = `
.c0 {
  padding-top: 16px;
  padding-bottom: 16px;
  padding-left: 16px;
  padding-right: 16px;
}

<td
  class="poodle-box poodle-table-cell c0"
>
  TableCell
</td>
`;

exports[`<TableCell /> should render Box props correctly 1`] = `
.c0 {
  padding-top: 16px;
  padding-bottom: 16px;
  padding-left: 16px;
  padding-right: 16px;
  margin-top: 20px;
}

<table>
  <tbody>
    <tr>
      <td
        class="poodle-box poodle-table-cell c0"
        id="id"
      >
        TableCell
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`<TableCell /> should render TableCell correctly 1`] = `
.c0 {
  padding-top: 16px;
  padding-bottom: 16px;
  padding-left: 16px;
  padding-right: 16px;
}

<table>
  <tbody>
    <tr>
      <td
        class="poodle-box poodle-table-cell c0"
      >
        TableCell
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`<TableCell /> should render with divider context correctly 1`] = `
.c0 {
  border-bottom: 1px solid;
  border-bottom-color: #CCCCCC;
  padding-top: 16px;
  padding-bottom: 16px;
  padding-left: 16px;
  padding-right: 16px;
}

<table>
  <tbody>
    <tr>
      <td
        class="poodle-box poodle-table-cell c0"
      >
        TableCell
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`<TableCell /> should render with level head correctly 1`] = `
.c0 {
  border-bottom: 1px solid;
  border-bottom-color: #CCCCCC;
  font-weight: 700;
  padding-top: 16px;
  padding-bottom: 16px;
  padding-left: 16px;
  padding-right: 16px;
}

<table>
  <thead>
    <tr>
      <th
        class="poodle-box poodle-table-cell c0"
      >
        TableCell
      </th>
    </tr>
  </thead>
</table>
`;

exports[`<TableCell /> size should render with size l correctly 1`] = `
.c1 {
  width: 100%;
  border-spacing: 0;
  border-collapse: collapse;
  text-align: left;
}

.c2 {
  padding-top: 24px;
  padding-bottom: 24px;
  padding-left: 16px;
  padding-right: 16px;
}

<div
  class="poodle-box poodle-table c0"
>
  <table
    class="poodle-box poodle-table__table c1"
  >
    <tbody>
      <tr>
        <td
          class="poodle-box poodle-table-cell c2"
        >
          TableCell
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`<TableCell /> size should render with size m correctly 1`] = `
.c1 {
  width: 100%;
  border-spacing: 0;
  border-collapse: collapse;
  text-align: left;
}

.c2 {
  padding-top: 16px;
  padding-bottom: 16px;
  padding-left: 16px;
  padding-right: 16px;
}

<div
  class="poodle-box poodle-table c0"
>
  <table
    class="poodle-box poodle-table__table c1"
  >
    <tbody>
      <tr>
        <td
          class="poodle-box poodle-table-cell c2"
        >
          TableCell
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`<TableCell /> size should render with size s correctly 1`] = `
.c1 {
  width: 100%;
  border-spacing: 0;
  border-collapse: collapse;
  text-align: left;
}

.c2 {
  padding-top: 8px;
  padding-bottom: 8px;
  padding-left: 16px;
  padding-right: 16px;
}

<div
  class="poodle-box poodle-table c0"
>
  <table
    class="poodle-box poodle-table__table c1"
  >
    <tbody>
      <tr>
        <td
          class="poodle-box poodle-table-cell c2"
        >
          TableCell
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`<TableCell /> theming should extend size styles 1`] = `
.c1 {
  width: 100%;
  border-spacing: 0;
  border-collapse: collapse;
  text-align: left;
}

.c2 {
  padding-top: 16px;
  padding-bottom: 16px;
  padding-left: 16px;
  padding-right: 16px;
  height: 100px;
}

<div
  class="poodle-box poodle-table c0"
>
  <table
    class="poodle-box poodle-table__table c1"
  >
    <tbody>
      <tr>
        <td
          class="poodle-box poodle-table-cell c2"
        >
          TableCell
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`<TableCell /> theming should extend size styles with mode 1`] = `
.c1 {
  width: 100%;
  border-spacing: 0;
  border-collapse: collapse;
  text-align: left;
}

.c2 {
  padding-top: 16px;
  padding-bottom: 16px;
  padding-left: 16px;
  padding-right: 16px;
  height: 100px;
  height: 110px;
}

<div
  class="poodle-box poodle-table c0"
>
  <table
    class="poodle-box poodle-table__table c1"
  >
    <tbody>
      <tr>
        <td
          class="poodle-box poodle-table-cell c2"
        >
          TableCell
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`<TableCell /> theming should extend styles in global 1`] = `
.c0 {
  padding-top: 16px;
  padding-bottom: 16px;
  padding-left: 16px;
  padding-right: 16px;
  margin-top: 10px;
  letter-spacing: 250px;
  top: 0;
  text-indent: 1px;
}

<table>
  <tbody>
    <tr>
      <td
        class="poodle-box poodle-table-cell c0"
      >
        TableCell
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`<TableCell /> theming should extend styles in local 1`] = `
.c0 {
  padding-top: 16px;
  padding-bottom: 16px;
  padding-left: 16px;
  padding-right: 16px;
  margin-top: 10px;
  letter-spacing: 250px;
  top: 0;
  text-indent: 1px;
}

<table>
  <tbody>
    <tr>
      <td
        class="poodle-box poodle-table-cell c0"
      >
        TableCell
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`<TableCell /> theming should override styles 1`] = `
.c0 {
  margin-top: 50px;
}

<table>
  <tbody>
    <tr>
      <td
        class="poodle-box poodle-table-cell c0"
      >
        TableCell
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`<TableCell /> theming should render with default props correctly 1`] = `
.c0 {
  padding-top: 16px;
  padding-bottom: 16px;
  padding-left: 16px;
  padding-right: 16px;
}

<table>
  <tbody>
    <tr>
      <td
        class="poodle-box poodle-table-cell hello c0"
        id="id"
      >
        TableCell
      </td>
    </tr>
  </tbody>
</table>
`;
